--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ share/python-wheels/
 MANIFEST
 *.cfg
 *.txt
+*.exe
+*.o
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
