--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 *.cfg
+*.txt
+*.exe
+*.o
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
